updated image, changed figure names, updated some of the writing

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,12 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 # R and the tidyverse
 ## Overview
 
-This textbook aims to be an approachable introduction to the world of data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The following six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+This textbook aims to be an approachable introduction to the world of data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to 
+
+(1) use reproducible tools to do data analysis and 
+(2) identify and solve common problems in data science. 
+
+The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The next six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
@@ -158,7 +163,8 @@ can_lang
 Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
 The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
 
-Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. 
+Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
+
 
 ```{r print_data_again}
 can_lang
@@ -178,7 +184,6 @@ and 6 columns:
 
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
-We will do this by printing the data we loaded earlier in the chapter to the screen. 
 
 Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
 name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
@@ -193,7 +198,7 @@ language_column
 
 ### Using `filter` to extract a single row
 
-We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the higher-level category is Aboriginal languages. To make this comparison, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Aboriginal languages"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
+We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. The second argument is a logical statement to use when filtering the rows. Suppose we were interested in looking at the languages in the Aboriginal languages higher-level category in this data set. To filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Aboriginal languages"`. Using quotes tells R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
 we have given to data frames in the code we have already written.
 
 With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
@@ -209,21 +214,16 @@ Creating effective data visualizations is an essential piece to any data analysi
 
 ### Using `ggplot` to create a bar plot
 
-Looking again at our data set below, we can immediately see that each variable--- higher-level language category (`category`), language (`language`), mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), etc. ---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+In our data set, we can see that each variable--- higher-level language category (`category`), language (`language`), mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), etc. ---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
-
-```{r}
-can_lang
-```
-
-To answer our data analysis question, we will begin by using the `slice_max` function, which selects rows with the highest values of a variable. Here we want to choose the top ten Aboriginal languages reported as a mother tongue language. In the function, we need to pass the data frame, the number of rows to select, and the variable to order by. 
+To answer our data analysis question, we will begin by using the `slice_max` function, which selects rows with the highest values of a variable. Here we want to choose the ten Aboriginal languages most often reported as a mother tongue language. In the function, we need to pass the data frame, the number of rows to select, and the variable to order by. 
 
 ```{r}
-top_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
-top_lang
+ten_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
+ten_lang
 ```
 
-We will make a bar plot using the `most_at_home` and `language` columns from our `top_lang` data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
+We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame. To create a bar plot of these two variables using the `ggplot` function, we would the following: 
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/ggplot_function.jpeg")
@@ -231,8 +231,8 @@ knitr::include_graphics("img/ggplot_function.jpeg")
 
 Below we create a bar plot using the `ggplot` function following the instructions described in figure \@ref(fig:img-ggplot):
 
-```{r barplot-mother-tongue, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue"}
-ggplot(top_lang, aes(x = language, y = mother_tongue)) +
+```{r barplot-mother-tongue, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
+ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
 
@@ -247,10 +247,10 @@ ggplot(top_lang, aes(x = language, y = mother_tongue)) +
 
 It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `mother_tongue` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure this variable, nor which group of people the measurements were taken. An axis label that reads "Mother tongue (Number of Canadians residents)" would be much more informative.
 
-Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
+Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to `xlab` and `ylab`, we surround them with double-quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
 
-```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue with x and y labels"}
-ggplot(top_lang, aes(x = language, y = mother_tongue)) +
+```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels"}
+ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") + 
    xlab("Language") + 
    ylab("Mother tongue (Number of Canadians residents)")
@@ -258,8 +258,8 @@ ggplot(top_lang, aes(x = language, y = mother_tongue)) +
 
 In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We can again add additional layers to the plot object using the `+` symbol to add the `coord_flip` function, which swaps the x and y coordinate axes:
 
-```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Horizontal bar plot of number of Canadians reporting a language as their mother tongue"}
-ggplot(top_lang, aes(x = language, y = mother_tongue)) +
+```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
+ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") + 
    xlab("Language") + 
    ylab("Mother tongue (Number of Canadians residents)") + 
@@ -267,17 +267,17 @@ ggplot(top_lang, aes(x = language, y = mother_tongue)) +
 ```
 
 
-From figure \@ref(fig:barplot-mother-tongue-flipped), we can see the ten Aboriginal languages that were most often reported in 2016 as mother tongues in Canada and how many people speak each of them. However, our visualization could be made more transparent by organizing the bars according to the number of Canadian residents reporting each language rather than in alphabetical order. We can reorder the bars using the `reorder` function, which orders a variable (here `language`) based on the values of the second variable (`mother_tongue`):
+From figure \@ref(fig:barplot-mother-tongue-flipped), we have answered our initial question. However, our visualization could be made more transparent by organizing the bars according to the number of Canadian residents reporting each language rather than in alphabetical order. We can reorder the bars using the `reorder` function, which orders a variable (here `language`) based on the values of the second variable (`mother_tongue`):
 
-```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of number of Canadians reporting a language as their mother tongue with bars reordered"}
-ggplot(top_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
+```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
+ggplot(ten_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
   geom_bar(stat = "identity") + 
    xlab("Language") + 
    ylab("Mother tongue (Number of Canadians residents)") + 
   coord_flip()
 ```
 
-From figure \@ref(fig:barplot-mother-tongue-reorder), we can clearly see what the top ten most often reported Aboriginal languages were according to the 2016 Candian census. The Aboriginal language most often reported were the Cree languages with over 60,000 Canadian residents reporting it as their mother tongue. 
+From figure \@ref(fig:barplot-mother-tongue-reorder), we have answered our question since we can see what the ten most often reported Aboriginal languages were according to the 2016 Candian census and how many people speak them. For instance, we can see that the Aboriginal language most often reported was Cree n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 
 > "n.o.s." means "not otherwise specified", so Cree n.o.s. refers to individuals who reported Cree as their mother tongue. In this data set, the Cree languages include the following categories: Cree n.o.s., Swampy Cree, Plains Cree, Woods Cree, and a 'Cree not included elsewhere' category (which includes Moose Cree, Northern East Cree and Southern East Cree)  [@language2018]. 
 
@@ -287,16 +287,16 @@ Learning how to describe data visualizations is a very useful skill. We will pro
 
 In the code chunk below, we put everything from this chapter together. We have added a few more layers to make the data visualization even more effective. Specifically, we changed the colour of the bars and changed the background from grey to white to improve the contrast. 
 
-```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
+```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 library(tidyverse)
 
 can_lang <- read_csv("data/can_lang.csv")
 
 aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
 
-top_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
+ten_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
 
-ggplot(top_lang, aes(
+ggplot(ten_lang, aes(
   x = reorder(language, mother_tongue), 
   y = mother_tongue)) +
   geom_bar(stat = "identity", fill = "steelblue") + 
