updated mutate image, edited wrangling chapter to add filter, select and mutate from chapter 1

--- a/index.Rmd
+++ b/index.Rmd
@@ -185,6 +185,8 @@ and 6 columns:
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
+### Using `select` to a single column
+
 Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
 name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
 the  `select` function returns a single column (the `language` column that we asked for) as a data frame.
@@ -196,7 +198,7 @@ language_column
 ```
 
 
-### Using `filter` to extract a single row
+### Using `filter` to extract rows
 
 We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. The second argument is a logical statement to use when filtering the rows. Suppose we were interested in looking at the languages in the Aboriginal languages higher-level category in this data set. To filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. Similar to when we loaded the data file and put quotes around the filename, here we need to put quotes around `"Aboriginal languages"`. Using quotes tells R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
 we have given to data frames in the code we have already written.
