added tables to explain data types, added table captions

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -48,8 +48,7 @@ and the columns are the variables:
 knitr::include_graphics("img/vars.jpeg")
 ```
 
-From a computer programming perspective, in R, a data frame is a special subtype of a list object whose elements (columns) are *vectors*. 
-For example, the data frame below has 3 elements that are vectors whose names are `state`, `year` and `population`.
+From a computer programming perspective, in R, a data frame is a special subtype of a list object whose elements (columns) are *vectors*. For example, the data frame below has 3 elements that are vectors whose names are `state`, `year` and `population`.
 
 ```{r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with 3 vectors", fig.retina = 2, out.width = "650"}
 knitr::include_graphics("img/vectors.jpeg")
@@ -57,13 +56,25 @@ knitr::include_graphics("img/vectors.jpeg")
 
 ### What is a vector?
 
-In R, vectors are objects that can contain 1 or more elements. The vector elements are ordered, and they must all be of the same type. Common 
-example types of vectors are character (e.g., letter or words), numeric (whole numbers and fractions) and logical (e.g., `TRUE` or `FALSE`). In 
-the vector shown below, the elements are of numeric type:
+In R, **vectors** are objects that can contain one or more elements. The vector elements are ordered, and they must all be of the same *data type*. R has a number of different basic data types as shown in table \@ref(tab:datatype-table).
+
+In the vector shown below, the elements are of numeric type:
 
 ```{r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a numeric type vector", fig.retina = 2, out.width = "600"}
 knitr::include_graphics("img/vector.jpeg")
 ```
+
+
+Table: (\#tab:datatype-table) Basic data types in R
+
+| Data type | Description | Example |
+|-------|------------------|-----------|
+| character | Letters or numbers surrounded by quotes |  "1", "Hello world!" |
+| numeric | Whole numbers and numbers with decimal values |   1.23, 20 |  
+| integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) | 
+| logical |  A value of true and false | `TRUE`, `FALSE` | 
+
+> There are other basic data types in R, such as *raw* and *complex*, which we won't cover in this textbook. 
 
 ### How are vectors different from a list?
 
@@ -99,6 +110,18 @@ frame is a built in R data frame or a tibble. If the data object is a date frame
 `class` will return `"data.frame"`, whereas if the data object is a tibble it 
 will return `"tbl_df" "tbl" "data.frame"`. You can easily convert built in R 
 data frames to tibbles using the `tidyverse` `as_tibble` function.
+
+Vectors, data frames and lists are basic types of *data structures* in R, which we summarize in table \@ref(tab:datastructure-table).
+
+Table: (\#tab:datastructure-table) Basic data structures in R
+
+| Data Structure | Description |
+|------|------------------|
+| vector | A set of values of the *same data type* (e.g. all values are numeric). A vector can be used to represent a single variable  | 
+| data frame | A set of *vectors* of the *same length*. A data frame can be used to represent a data set. | 
+| list | A set of values, which can have different data types. Lists can be used to represent combinations of data values.| 
+
+> There are other data structures, such as *matrices*, which will not be covered in this book. 
 
 ## Tidy Data
 
