--- a/index.Rmd
+++ b/index.Rmd
@@ -64,7 +64,8 @@ The four common data science problems that are useful for answering predictive a
 
 We map each of these problems to the type of data analysis question and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
-**Types of data analysis questions**
+
+Table: (\#tab:questions-table) Types of data analysis questions
 
 | Question type | Description | Example |
 |---------------|-------------|---------|
