grammar, spelling and logical check, applied styler

--- a/index.Rmd
+++ b/index.Rmd
@@ -254,18 +254,18 @@ Adding additional layers to our visualizations that we create in `ggplot` is one
 
 ```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
-  geom_bar(stat = "identity") + 
-   xlab("Language") + 
-   ylab("Mother tongue (Number of Canadians residents)")
+  geom_bar(stat = "identity") +
+  xlab("Language") +
+  ylab("Mother tongue (Number of Canadians residents)")
 ```
 
 In figure \@ref(fig:barplot-mother-tongue-labs), the x labels overlap, making it challenging to read the different languages. One solution is to rotate the plot, so the bars are horizontal, and thus the labels will be more readable. We can again add additional layers to the plot object using the `+` symbol to add the `coord_flip` function, which swaps the x and y coordinate axes:
 
 ```{r barplot-mother-tongue-flipped, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue"}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
-  geom_bar(stat = "identity") + 
-   xlab("Language") + 
-   ylab("Mother tongue (Number of Canadians residents)") + 
+  geom_bar(stat = "identity") +
+  xlab("Language") +
+  ylab("Mother tongue (Number of Canadians residents)") +
   coord_flip()
 ```
 
@@ -274,9 +274,9 @@ From figure \@ref(fig:barplot-mother-tongue-flipped), we have answered our initi
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
 ggplot(ten_lang, aes(x = reorder(language, mother_tongue), y = mother_tongue)) +
-  geom_bar(stat = "identity") + 
-   xlab("Language") + 
-   ylab("Mother tongue (Number of Canadians residents)") + 
+  geom_bar(stat = "identity") +
+  xlab("Language") +
+  ylab("Mother tongue (Number of Canadians residents)") +
   coord_flip()
 ```
 
@@ -300,14 +300,14 @@ aboriginal_lang <- filter(can_lang, category == "Aboriginal languages")
 ten_lang <- slice_max(aboriginal_lang, n = 10, order_by = mother_tongue)
 
 ggplot(ten_lang, aes(
-  x = reorder(language, mother_tongue), 
-  y = mother_tongue)) +
-  geom_bar(stat = "identity", fill = "steelblue") + 
-   xlab("Language") + 
-   ylab("Mother tongue (Number of Canadians residents)") + 
-  coord_flip() + 
+  x = reorder(language, mother_tongue),
+  y = mother_tongue
+)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  xlab("Language") +
+  ylab("Mother tongue (Number of Canadians residents)") +
+  coord_flip() +
   theme_bw() # use a theme to have a white background
-
 ```
 
 This exercise demonstrates the power of R. In relatively few lines of code, we performed an entire data science workflow with a highly effective data visualization! We asked a question, read the data into R, wrangled the data (using `filter` and `slice_max`) and created a data visualization to help answer our question.  In this chapter, you got a quick taste of the data science workflow, but we will learn each of these steps in more detail in the coming chapters! 
