changed library to package, updated bolding

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -29,7 +29,7 @@ At this point, we know how to load data into R from various file formats. Once l
 
 ### What is a data frame?
 
-Let's first start by defining what a *data frame* is exactly. From a data perspective, it is a rectangle where the rows are the observations:
+Let's first start by defining what a **data frame** is exactly. From a data perspective, it is a rectangle where the rows are the observations:
 
 ```{r 02-setup, include=FALSE}
 devtools::install_github("ttimbers/canlang")
