--- a/index.Rmd
+++ b/index.Rmd
@@ -82,7 +82,7 @@ Source: [What is the question?](https://science.sciencemag.org/content/347/6228/
 
 By the end of the chapter, students will be able to:
 
-- load the `tidyverse` library into R
+- load the `tidyverse` package into R
 - create new variables and objects in R using the assignment symbol
 - use the help and documentation tools in R
 - match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
