--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -41,12 +41,15 @@ another example, we could try to use the size of a house to
 predict its sale price. Both of these response variables---race time and sale price---are 
 numerical, and so predicting them given past data is considered a regression problem.
 
-> You can tell whether a variable is numerical or categorical---and therefore whether you
-> need to perform regression or classification---by taking two observations A and B from your
-> data, and asking the question "is response variable A *more* than response variable B?"
+> You can usually tell whether a variable is numerical or categorical---and therefore whether you
+> need to perform regression or classification---by taking two response variables X and Y from your
+> data, and asking the question "is response variable X *more* than response variable Y?"
 > If the variable is categorical, the question will make no sense ("is blue more than red?",
 > or "is benign more than malignant?"). If the variable is numerical, it will make sense
 > ("is 1.5 hours more than 2.25 hours?", or "is \$500,000 more than \$400,000?").
+> Be careful when applying this heuristic, though: sometimes a categorical variables will be encoded as
+> numbers in your data (e.g. "1" represents "benign", and "0" represents "malignant"). In these cases
+> you have to ask the question about the *meaning* of the labels ("benign" and "malignant"), not their values ("1" and "0"). 
 
 Many of the concepts from classification map over to the setting of regression. For example, 
 a regression model predicts a new observation's response variable based on the response variables
